# PSXJun

./: .gitignore  CMakeLists.txt  README.md
rom/: misc.txt  misc2.txt
src/: CMakeLists.txt  cpu.cpp  cpu.hpp  instruction.hpp  main.cpp  memory.cpp  memory.hpp  opcodetable.cpp  opcodetable.hpp  psx.hpp  r3000a.hpp
src/common/: alignment.hpp  integer_extension.hpp  memory_base.hpp  register_base.hpp
src/debugger/: debug_state.hpp  menubar.cpp  menubar.hpp  runtime.cpp  runtime.hpp
src/debugger/table/: opcode_table.cpp  opcode_table.hpp
src/debugger/widgets/: executor.cpp  instruction_trace.hpp  registers.cpp  widgets.hpp
src/main/: main.cpp
src/memory/: memory.cpp  memory.hpp  memory_mapping.hpp
src/mips_r3000a/: exception_vectors.hpp  instructions.hpp  mips_manager.cpp  mips_manager.hpp  mips_state.cpp  mips_state.hpp  opcode_table.cpp  opcode_table.hpp  opcodes.hpp
src/mips_r3000a/archive/: cpu.cpp  cpu.hpp
src/mips_r3000a/cop0/: cop0_state.cpp  cop0_state.hpp  exception_register.hpp  misc_register.hpp  status_register.cpp  status_register.hpp  tbl_register_pair.hpp
src/mips_r3000a/interpreter/: alu_impl.cpp  exception_impl.cpp  instruction_tables.hpp  interpreter.cpp  interpreter.hpp  load_store_impl.cpp
src/mips_r3000a/interpreter/impl/: arithmetic_impl.cpp  load_impl.cpp  logical_impl.cpp  readme.md  shifting_impl.cpp  store_impl.cpp
src/processor/: .cpu.cpp.swp  .cpu.hpp.swp  TODO.md  cop0.cpp  cop0.hpp  cpu.cpp  cpu.hpp  exceptionVectors.hpp  instruction.hpp
src/system/: .bus.cpp.swp  .bus.hpp.swp  bus.cpp  bus.hpp  interrupt_controller.cpp  interrupt_controller.hpp  memories.cpp  memories.hpp  memory_controller.hpp  memory_manager.cpp  memory_manager.hpp  memory_map_addresses.hpp  memory_region.hpp  mmio.cpp  mmio.hpp  psx.cpp  psx.hpp  psx_system.cpp  psx_system.hpp
src/system/cdrom/: TODO.md
src/test/: test_instructions  test_instructions.cpp  test_memory.cpp
src/util/: readme.md  util.cpp  util.hpp
tests/: CMakeLists.txt
